--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,31 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
 .temp-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-items: center;
 }
 
 .other-temps {
   display: flex;
+  align-items: end;
+  gap: 12px;
+}
+
+.temp {
+  font-size: 156px;
+}
+
+.feels-like {
+  font-size: 54px;
+}
+
+.other-temps > div {
+  font-size: 24px;
 }
