--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ body {
   justify-items: center;
 }
 
+* {
+  font-size: 24px;
+  font-weight: bold;
+}
 .temp-container {
   display: flex;
   flex-direction: column;
@@ -24,8 +28,4 @@ body {
 
 .feels-like {
   font-size: 54px;
-}
-
-.other-temps > div {
-  font-size: 24px;
 }
